# paper-summary

./: .gitignore  Dockerfile  README.md  config.ini  crontab  docker-compose.development.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
data/: query_list.txt
paper_summary/: main.py
paper_summary/utils/: notifications.py
