[tool.poetry]
name = "paper-summary"
version = "0.1.0"
description = ""
authors = ["kawayama <kawa130307@gmail.com>"]
readme = "README.md"
packages = [{include = "paper_summary"}]

[tool.poetry.dependencies]
python = "^3.11"
arxiv = "^1.4.3"
openai = "^0.27.4"
sqlite-utils = "^3.30"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pyperclip = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
